--- a/RCU_FW/.cproject
+++ b/RCU_FW/.cproject
@@ -81,9 +81,11 @@
 							<tool id="fr.ac6.managedbuild.tool.gnu.cross.c.linker.1657461832" name="MCU GCC Linker" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.linker">
 								<option id="gnu.c.link.option.paths.251734085" name="Library search path (-L)" superClass="gnu.c.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f4discovery_hal_lib/Debug}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Ac6\STM32Cube_FW_F4_V1.7.0\Drivers\CMSIS\Lib\ARM&quot;"/>
 								</option>
 								<option id="gnu.c.link.option.libs.1292526897" name="Libraries (-l)" superClass="gnu.c.link.option.libs" valueType="libs">
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="stm32f4discovery_hal_lib"/>
+									<listOptionValue builtIn="false" value="stm32f4discovery_hal_lib"/>
+									<listOptionValue builtIn="false" value=":arm_cortexM4lf_math.lib"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.1424571983" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
